--- a/ToDoList/todoapp/templates/todoapp/base.html
+++ b/ToDoList/todoapp/templates/todoapp/base.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'todoapp/css/style.css' %}">
 	<link rel="shortcut icon" href="{% static 'todoapp/images/favicon.ico' %}" type="image/x-icon"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'todoapp/css/custom.css' %}">
     <title>{{ title }}</title>
         <nav class="navbar bg-body-tertiary">
       <div class="container-fluid">
